--- a/pwiz_tools/Skyline/Model/AuditLog/PropertyNames.ja.resx
+++ b/pwiz_tools/Skyline/Model/AuditLog/PropertyNames.ja.resx
@@ -908,6 +908,9 @@
   <data name="IonMobilityValue_Mobility" xml:space="preserve">
     <value>イオン移動度</value>
   </data>
+  <data name="IonMobilityValue_Units" xml:space="preserve">
+    <value>イオン移動度の単位</value>
+  </data>
   <data name="StaticMod_Label13C" xml:space="preserve">
     <value>13C</value>
   </data>
